k3s/production/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    kubernetes.io/ingress.class: nginx
    cert-manager.io/cluster-issuer: letsencrypt-prod
    acme.cert-manager.io/http01-edit-in-place: "true"
    nginx.ingress.kubernetes.io/ssl-redirect: "true"
  name: pocketbase-ingress
spec:
  rules:
  - host: pocketbase.tino.sh
    http:
      paths:
      - pathType: Prefix
        path: /
        backend:
          service:
            name: pocketbase-app-service
            port:
              number: 8090
  tls:
  - hosts:
    - pocketbase.tino.sh
    secretName: pocketbase-tino-sh-tls
